--- a/taiwan-media-whitelist.html
+++ b/taiwan-media-whitelist.html
@@ -2,9 +2,52 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>媒體白名單</title>
+<title>台灣媒體白名單</title>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v3.3"></script>
 <script src="https://apis.google.com/js/platform.js"></script>
+<style type="text/css">
+body {
+	font-family: Microsoft JhengHei;
+	sans-serif;
+	DFKai-sb;
+}
+
+fieldset {
+	display: block;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 0.75em;
+	padding-right: 0.75em;
+	border: 1px solid #333;
+	border-right: 1px solid #333;
+	border-bottom: 1px solid #333;
+}
+
+legend {
+	font-weight: bold;
+	font-size: 18px;
+}
+
+div {
+	margin-top: 3px;
+	margin-bottom: 3px;
+	margin-left: 3px;
+	margin-right: 3px;
+}
+
+hr {
+	border: none;
+	height: 1px;
+	color: #333;
+	/* old IE */
+	background-color: #333;
+	/* Modern Browsers */
+}
+</style>
 </head>
 <body>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-JNeBKlG0cI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
