--- a/taiwan-media-whitelist.html
+++ b/taiwan-media-whitelist.html
@@ -52,7 +52,7 @@ hr {
 <body>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-JNeBKlG0cI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/mVEItYOsXjM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<h2>公視 P sharp 媒體實驗室的君竹推薦的媒體白名單</h2>
+<h2>公視 P sharp 媒體實驗室君竹推薦的媒體白名單</h2>
 <form>
 	<fieldset>
 		<legend>公廣集團</legend>
