--- a/taiwan-media-whitelist.html
+++ b/taiwan-media-whitelist.html
@@ -9,6 +9,8 @@
 <body>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-JNeBKlG0cI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/mVEItYOsXjM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0JoMqP5UwQ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/m3gLNa-fx_w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h2>公視 P sharp 媒體實驗室的君竹推薦的媒體白名單</h2>
 <form>
 	<fieldset>
